# cpp_csv_import_and_analysis_demo

./: .gitignore  CMakeLists.txt  README.md  T_T100_SEGMENT_ALL_CARRIER_2024_top_10k_rows_by_pax.csv  cpp_csv_demo.cpp  equivalent_py_pandas_code.ipynb
Output/: airlines_by_mean_dist.csv  total_origin_pax_by_airline_and_airport.csv
Python_Output/: airlines_by_mean_dist.csv  total_origin_pax_by_airline_and_airport.csv
